--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/virtual-teacher/react-mathquill#readme",
   "dependencies": {
     "@matejmazur/react-katex": "^3.1.3",
-    "jquery": "^1.12.4",
+    "jquery": "2.1.1",
     "katex": "^0.13.5",
     "mathquill": "git+https://git@github.com/Khan/mathquill.git#a9ae54e057c5c1acc8244a5627acbff29901d992",
     "react": "^17.0.2",
@@ -26,7 +26,9 @@
   "devDependencies": {
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
+    "css-loader": "^5.2.4",
     "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^9.1.1",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
