chore: fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-mathquill",
+  "name": "@virtual-teacher/react-mathquill",
   "version": "1.0.0",
   "description": "",
   "private": "true",
