chore: update files

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "webpack serve"
   },
   "files": [
-    "/lib"
+    "/lib",
+    "/src/fonts",
+    "/src/mathquill.css"
   ],
   "repository": {
     "type": "git",
