--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,8 @@
     "outDir": "lib/esm",
     "module": "esnext",
     "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "declaration": true,
     "baseUrl": "src",
     "allowJs": false,
     "skipLibCheck": true,
