--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@matejmazur/react-katex": "^3.1.3",
     "jquery": "2.1.1",
     "katex": "^0.13.5",
-    "mathquill": "git+https://git@github.com/Khan/mathquill.git#a9ae54e057c5c1acc8244a5627acbff29901d992",
+    "mathquill": "git+https://git@github.com/virtual-teacher/mathquill.git#60938076dce605f5744c7a115c37f836710e513d",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
