--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@matejmazur/react-katex": "^3.1.3",
     "jquery": "2.1.1",
     "katex": "^0.13.5",
-    "mathquill": "git+https://git@github.com/virtual-teacher/mathquill.git#78c5d92536e5b7da6773d14e5d0eed6f31067e58",
+    "mathquill": "git+https://git@github.com/virtual-teacher/mathquill.git#v1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
